# webapp

./: .gitignore  README.md  config.py  gunicorn.conf.py  pyproject.toml  requirements.txt  webapp.db
app/: __init__.py  utils.py
app/api/: __init__.py
app/auth/: __init__.py  routes.py
app/charts/: __init__.py  routes.py
app/forms/: auth.py  sensors.py
app/main/: routes.py
app/models/: user.py
app/sensors/: __init__.py  routes.py
app/settings/: __init__.py  routes.py
app/static/css/: custom.css
app/static/js/: highlight.min.js  select_options_button_handler.js
app/templates/: _formhelpers.html  base.html  index.html
app/templates/auth/: login.html  profile.html  signup.html
app/templates/errors/: internal_error.html  page_not_found.html
app/templates/sensors/: add.html  sensor.html  upload.html  viewconf.html
app/templates/settings/: firmware.html  index.html  lora.html  modem.html  network.html  overlays.html  temp.html
confs/: FS-C1.conf  PM3133.conf
src/webapp_napilinux/: __init__.py  config.py  utils.py  webapp.db
src/webapp_napilinux.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/webapp_napilinux/api/: __init__.py  routes.py
src/webapp_napilinux/app/: __init__.py
src/webapp_napilinux/app/api/: routes.py
src/webapp_napilinux/app/auth/: routes.py
src/webapp_napilinux/app/main/: __init__.py  routes.py
src/webapp_napilinux/app/sensors/: __init__.py  routes.py
src/webapp_napilinux/app/templates/: base.html
src/webapp_napilinux/app/templates/charts/: index.html
src/webapp_napilinux/app/templates/sensors/: index.html
src/webapp_napilinux/auth/: __init__.py  routes.py
src/webapp_napilinux/charts/: __init__.py
src/webapp_napilinux/confs/: PM3133.conf
src/webapp_napilinux/main/: __init__.py  routes.py
src/webapp_napilinux/models/: user.py
src/webapp_napilinux/sensors/: __init__.py  routes.py
src/webapp_napilinux/settings/: __init__.py  routes.py
src/webapp_napilinux/static/css/: custom.css
src/webapp_napilinux/static/js/: select_options_button_handler.js
src/webapp_napilinux/templates/sensors/: add.html  sensor.html  viewconf.html
src/webapp_napilinux/templates/settings/: firmware.html  index.html  modem.html
tests/: glob-test.py  launch-test.py
webapp/app/auth/: __init__.py
webapp/app/forms/: network.py
webapp/app/static/js/: select_options_button_handler.js
webapp/app/templates/charts/: index.html
webapp/app/templates/errors/: page_not_found.html
webapp/app/templates/settings/: modem.html
webapp_napilinux.egg-info/: PKG-INFO  SOURCES.txt
