[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]

name = "webapp_napilinux"
version = "0.0.1"
authors = [
  { name="Ravenlod", email="talgatomarov68@gmail.com" },
]
description = "webapp for napilinux"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Alpha",
]
dependencies = [
    "alembic==1.9.3",
    "blinker==1.6.2",
    "click==8.1.6",
    "Flask==2.3.3",
    "Flask-Login==0.6.2",
    "Flask-Migrate==4.0.4",
    "Flask-SQLAlchemy==3.0.3",
    "gevent==23.9.1",
    "greenlet==3.0.0",
    "gunicorn==21.2.0",
    "importlib-metadata==6.8.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "Mako==1.2.4",
    "MarkupSafe==2.1.2",
    "packaging==23.2",
    "pycairo==1.24.0",
    "pydbus==0.6.0",
    "PyGObject==3.44.1",
    "PyGObject-stubs==2.8.0",
    "six==1.16.0",
    "SQLAlchemy==2.0.3",
    "typing_extensions==4.5.0",
    "Werkzeug==2.3.7",
    "WTForms==3.0.1",
    "WTForms-SQLAlchemy==0.3",
    "zipp==3.16.2",
    "zope.event==5.0",
    "zope.interface==6.1",
]

[project.urls]
"Homepage" = "https://github.com/Ravenlod/webapp"